# valu3

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  crates-io.md  example.parquet  retag.sh
.github/workflows/: cargo-valu3-derive.yml  cargo-valu3-parket.yml  cargo-valu3-parquet.yml  cargo-valu3.yml  main-test.yml  merge.yml  publish.yml  pull-request.yml  release.yml  tagging.yml
valu3/: Cargo.toml  README.md
valu3/src/: impls.rs  lib.rs  prelude.rs  primitives.rs  test_derive.rs  to_value.rs  traits.rs  value.rs
valu3/src/parser/: mod.rs  value.pest
valu3/src/serde_value/: Cargo.toml  de.rs  error.rs  mod.rs  ser.rs
valu3/src/serde_value/src/: de.rs  ser.rs
valu3/src/tests/: derive.rs  mod.rs
valu3/src/to/: bin.rs  json.rs  mod.rs  yaml.rs
valu3/src/types/: array.rs  datetime.rs  mod.rs  number.rs  object.rs  stringb.rs  value_key.rs
valu3_derive/: Cargo.toml  README.md
valu3_derive/examples/: derive.rs
valu3_derive/src/: lib.rs
valu3_parket/: Cargo.toml
valu3_parket/src/: froms.rs  lib.rs  table_record_batch.rs
valu3_parquet/: Cargo.toml
valu3_parquet/examples/: parquet.rs
valu3_parquet/src/: from.rs  lib.rs  pretty.rs  table.rs  table_record_batch.rs
