[package]
name = "valu3"
version = "0.4.2"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "crates-io.md"
authors = ["Philippe Assis <codephilippe@gmail.com>"]
repository = "https://github.com/purp-project/valu3"
keywords = ["value", "generic", "type", "serde", "parsing"]
description = "A generic serialization/deserialization/type framework"
categories = ["encoding", "no-std", "parsing", "serialization", "deserialization"]
documentation = "https://docs.rs/valu3"

[dependencies]
pest="2.7.6"
pest_derive="2.5.7"
regex = "1.10.3"
chrono = "0.4.33"
serde = { version = "1.0.196", features = ["derive"], optional = true }
valu3-derive = { path = "../valu3_derive", optional = true, version = "0.4.0"}
valu3-parquet = { path = "../valu3_parquet", optional = true, version = "0.4.0"}

[features]
default = ["parser", "derive"]
parser = ["json"]
json = []
serde = ["dep:serde"]
cstring = []
derive = ["dep:valu3-derive"]
parquet = ["dep:valu3-parquet"]

[lib]
doctest = false
