[package]
name = "valu3"
version = "0.5.9"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "crates-io.md"
authors = ["Philippe Assis <codephilippe@gmail.com>"]
repository = "https://github.com/cogup/valu3"
keywords = ["value", "generic", "type", "serde", "parsing"]
description = "A generic serialization/deserialization/type framework"
categories = ["encoding", "no-std", "parsing"]
documentation = "https://docs.rs/valu3"

[dependencies]
pest="2.7.13"
pest_derive="2.7.13"
regex = "1.10.6"
chrono = "0.4.38"
serde = { version = "1.0.210", features = ["derive"], optional = true }
valu3-derive = { path = "../valu3_derive", optional = true, version = "0.5.9"}
bincode = { version = "1.3.3", optional = true }

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.128"

[features]
default = ["parser", "derive", "serde", "bin"]
parser = ["json"]
json = []
serde = ["dep:serde"]
cstring = []
derive = ["dep:valu3-derive"]
bin = ["dep:bincode", "serde"]

[lib]
doctest = false
