[package]
name = "valu3-derive"
version = "0.3.13"
edition = "2021"
license = "MIT"
readme = "crates-io.md"
authors = ["Philippe Assis <codephilippe@gmail.com>"]
repository = "https://github.com/purp-lang/valu3"
keywords = ["valu3", "serialization", "deserialization", "serde", "any"]
description = "A generic serialization/deserialization/type framework"
categories = ["encoding", "no-std"]
documentation = "https://docs.rs/valu3-derive"


[dependencies]
syn = { version = "2.0.48", features = ["full"] }
quote = "1.0.35"
proc-macro2 = "1.0.78"

[lib]
proc-macro = true