[package]
name = "valu3-derive"
version = "0.4.5"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "crates-io.md"
authors = ["Philippe Assis <codephilippe@gmail.com>"]
repository = "https://github.com/purp-project/valu3"
keywords = ["valu3", "serialization", "deserialization", "serde", "derive"]
description = "Derive macros for the valu3 crate."
categories = ["encoding", "no-std", "serialization", "deserialization"]
documentation = "https://docs.rs/valu3-derive"


[dependencies]
syn = { version = "2.0.48", features = ["full"] }
quote = "1.0.35"
proc-macro2 = "1.0.78"

[lib]
proc-macro = true