[package]
name = "valu3_parquet"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
valu3 = { path = "../valu3" }
parquet = "50.0.0"
arrow = "50.0.0"
prettytable = { version = "0.10.0", optional = true }
