[package]
name = "valu3-parquet"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "crates-io.md"
authors = ["Philippe Assis <codephilippe@gmail.com>"]
repository = "https://github.com/purp-project/valu3"
keywords = ["valu3", "generic", "apache", "arrow", "parquet"]
description = "Parquet and Arrow encoding and decoding for valu3"
categories = ["encoding", "no-std", "parquet", "arrow", "valu3"]
documentation = "https://docs.rs/valu3-parquet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
valu3 = { path = "../valu3", version = "0"}
parquet = "50.0.0"
arrow = "50.0.0"
prettytable = { version = "0.10.0", optional = true }
